--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "nstephenson.github.io",
+  "homepage": "rubberkalimba.com/build",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
